# ChangeLog for app-misc/g15macro
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-misc/cvs-repo/gentoo-x86/app-misc/g15macro/ChangeLog,v 1.5 2008/09/13 22:35:35 robbat2 Exp $

*g15macro-1.0.3 (13 Sep 2008)

  13 Sep 2008; Robin H. Johnson <robbat2@gentoo.org> +g15macro-1.0.3.ebuild:
  Version bump, fixes dropped keypresses during replay.

  21 Feb 2008; Robin H. Johnson <robbat2@gentoo.org> g15macro-1.0.0.ebuild,
  g15macro-1.0.1.ebuild:
  Add ~ppc.

*g15macro-1.0.1 (25 Dec 2007)

  25 Dec 2007; Markus Ullmann <jokey@gentoo.org> +g15macro-1.0.1.ebuild:
  Version bump

  01 May 2007; Markus Rothe <corsair@gentoo.org> g15macro-1.0.0.ebuild:
  Added ~ppc64; bug #175120

*g15macro-1.0.0 (15 Mar 2007)

  15 Mar 2007; Robert Buchholz <rbu@gentoo.org> +metadata.xml,
  +g15macro-1.0.0.ebuild:
  Initial version, thanks to Alex Maclean (monkeh) for ~x86
