@@ -1,6 +1,9 @@
 # ChangeLog for app-misc/g15macro
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-misc/cvs-repo/gentoo-x86/app-misc/g15macro/ChangeLog,v 1.5 2008/09/13 22:35:35 robbat2 Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/app-misc/cvs-repo/gentoo-x86/app-misc/g15macro/ChangeLog,v 1.6 2010/01/18 15:55:12 rbu Exp $
+
+  18 Jan 2010; Robert Buchholz <rbu@gentoo.org> metadata.xml:
+  Dropping maintenance
 
 *g15macro-1.0.3 (13 Sep 2008)
 
